--- a/resources/scss/field.scss
+++ b/resources/scss/field.scss
@@ -1,4 +1,5 @@
 @import '../../node_modules/vue3-openlayers/dist/vue3-openlayers.css';
+@import '../../node_modules/ol-geocoder/dist/ol-geocoder.min.css';
 
 .map-container {
     position: relative;
@@ -10,7 +11,7 @@
     &.with-marker {
         transition: all 300ms;
 
-        &:after {
+        &:before {
             position: absolute;
             content: '';
             width: 46px;
@@ -19,19 +20,24 @@
             left: calc(50% - 23px);
             background: url('/vendor/nova-map-field/dist/images/ic-pin-1.png') center;
             background-size: cover !important;
+            z-index: 10;
         }
 
         &.marker-icon-2 {
-            &:after {
+            &:before {
                 background-image: url('/vendor/nova-map-field/dist/images/ic-pin-2.png');
             }
         }
 
         &.marker-icon-3 {
-            &:after {
+            &:before {
                 background-image: url('/vendor/nova-map-field/dist/images/ic-pin-3.png');
             }
         }
+    }
+
+    .ol-overlaycontainer-stopevent {
+        z-index: 15 !important;
     }
 }
 
@@ -42,5 +48,152 @@
 
     svg {
         margin-right: 4px;
+    }
+}
+
+#gcd-container {
+    // text-input
+    &.gcd-txt-container {
+        height: 42px;
+
+        .gcd-txt-control {
+            height: 42px;
+
+            input {
+                width: 100%;
+                height: 40px;
+                border: 2px solid rgba(0, 60, 136, .5);
+                border-radius: 5px;
+                background: rgba(255, 255, 255, 0.8);
+                color: #000;
+                font-size: 15px;
+                outline: none;
+
+                &:focus {
+                    box-shadow: none;
+                }
+            }
+
+            .gcd-txt-glass {
+                left: 4px;
+            }
+
+            .gcd-txt-reset {
+                right: 4px;
+            }
+        }
+
+        .gcd-txt-result {
+            top: 50px;
+            border: 2px solid rgba(0, 60, 136, 0.5);
+            border-radius: 5px;
+            background: #FFFFFF;
+            padding: 6px;
+            box-shadow: 0 1px 7px rgb(0 0 0 / 50%);
+
+            &:empty {
+                display: none;
+            }
+
+            li {
+                font-size: 13px;
+
+                &:nth-child(odd) {
+                    background-color: rgba(var(--colors-primary-100));
+                }
+
+                a {
+                    display: block;
+                    transition: all 300ms;
+                    border-radius: 5px;
+                    padding: 8px 4px;
+                    margin: 2px 0;
+                }
+
+                &:hover {
+                    a {
+                        background: rgba(0, 60, 136, 0.1);
+                    }
+                }
+            }
+        }
+    }
+
+    // glass-button
+    &.gcd-gl-container {
+        .gcd-gl-control {
+            margin-left: 1px;
+            padding: 0;
+            width: 2.1275em;
+            height: 2.1275em;
+            overflow: visible;
+
+            .gcd-button-control {
+                top: 0;
+                left: 0;
+            }
+
+            .gcd-gl-input {
+                display: none;
+                opacity: 0;
+                transition: all 300ms;
+                outline: none;
+                top: 0;
+                font-size: 11px;
+                left: 36px;
+                width: 203px;
+
+                &:focus {
+                    box-shadow: none;
+                }
+            }
+
+            &.gcd-gl-expanded {
+                .gcd-gl-input {
+                    display: block;
+                    opacity: 1;
+                }
+
+                .gcd-gl-reset {
+                    display: none;
+                }
+            }
+        }
+
+        .gcd-gl-result {
+            top: 32px;
+            left: 36px;
+            border: 2px solid rgba(0, 60, 136, 0.5);
+            border-radius: 5px;
+            background: #FFFFFF;
+            padding: 6px;
+            box-shadow: 0 1px 7px rgb(0 0 0 / 50%);
+
+            &:empty {
+                display: none;
+            }
+
+            li {
+                font-size: 13px;
+
+                &:nth-child(odd) {
+                    background-color: rgba(var(--colors-primary-100));
+                }
+
+                a {
+                    display: block;
+                    transition: all 300ms;
+                    border-radius: 5px;
+                    padding: 8px 4px;
+                    margin: 2px 0;
+                }
+
+                &:hover {
+                    a {
+                        background: rgba(0, 60, 136, 0.1);
+                    }
+                }
+            }
+        }
     }
 }
