--- a/resources/scss/field.scss
+++ b/resources/scss/field.scss
@@ -1,12 +1,28 @@
 @import '../../node_modules/vue3-openlayers/dist/vue3-openlayers.css';
 @import '../../node_modules/ol-geocoder/dist/ol-geocoder.min.css';
 
+.ol-zoomslider {
+    border: 3px solid #53B2C7;
+}
+
 .map-container {
     position: relative;
 
     .ol-overlaycontainer-stopevent {
         z-index: 15 !important;
     }
+}
+
+.ol-control, .ol-control:hover {
+    background-color: #FFFFFF;
+}
+
+.ol-control button {
+    background-color: #53B2C7;
+}
+
+.ol-control button:hover {
+    background-color: #53B2C7;
 }
 
 .map-location-information {
@@ -30,7 +46,7 @@
             input {
                 width: 100%;
                 height: 40px;
-                border: 2px solid rgba(0, 60, 136, .5);
+                border: 2px solid #53B2C7;
                 border-radius: 5px;
                 background: rgba(255, 255, 255, 0.8);
                 color: #000;
@@ -131,7 +147,7 @@
         .gcd-gl-result {
             top: 32px;
             left: 36px;
-            border: 2px solid rgba(0, 60, 136, 0.5);
+            border: 2px solid #53B2C7;
             border-radius: 5px;
             background: #FFFFFF;
             padding: 6px;
