--- a/resources/scss/field.scss
+++ b/resources/scss/field.scss
@@ -165,3 +165,10 @@
         }
     }
 }
+
+.ol-undo {
+    position: absolute;
+    top: 0.3em;
+    right: 0.3em;
+    font-size: 18px !important;
+}
