--- a/resources/scss/field.scss
+++ b/resources/scss/field.scss
@@ -1,6 +1,5 @@
-@import '../../node_modules/vue3-openlayers/dist/vue3-openlayers.css';
-//@import '../../node_modules/ol-geocoder/dist/ol-geocoder.min.css';
-@import '../../node_modules/@kirtandesai/ol-geocoder/dist/ol-geocoder.min.css';
+@import '../../node_modules/vue3-openlayers/dist/styles.css';
+@import '../../node_modules/ol-geocoder/dist/ol-geocoder.min.css';
 
 .map-container {
     position: relative;
