--- a/resources/scss/field.scss
+++ b/resources/scss/field.scss
@@ -35,6 +35,7 @@
                 background: rgba(255, 255, 255, 0.8);
                 color: #000;
                 font-size: 15px;
+                padding: 5px 30px 5px 30px;
                 outline: none;
 
                 &:focus {
@@ -43,11 +44,17 @@
             }
 
             .gcd-txt-glass {
-                left: 4px;
+                left: 12px;
+                top: 8px;
             }
 
             .gcd-txt-reset {
                 right: 4px;
+            }
+
+            .gcd-txt-search {
+                top: 2px;
+                right: 2px;
             }
         }
 
